--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
+.input-group {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.input-group label {
+    width: 120px;
+    text-align: right;
+    margin-right: 10px;
+}
+
+.input-group input[type="number"] {
+    width: 60px;
+}
+
 .circle {
     width: 30px;
     height: 30px;
