--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,17 @@
     width: 60px;
 }
 
+#currentBpmDisplay {
+    font-size: 1.5em;
+    text-align: center;
+    margin: 20px 0 10px 0;
+}
+
+#barCount {
+    text-align: center;
+    margin: 10px 0;
+}
+
 .circle {
     width: 30px;
     height: 30px;
