--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@
     width: 60px;
 }
 
+.range-hint {
+    color: #888;
+    margin-left: 10px;
+    font-size: 0.9em;
+}
+
 #currentBpmDisplay {
     font-size: 1.5em;
     text-align: center;
